--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container-fluid bg-info">
       <div class="row vh-100">
         <div class="col-sm-3 align-self-center">
-          <h3 class=" header text-white text-center">Extremely nice<br> Weather App!</h3>
+          <h3 class=" header text-white text-center">Extremely nice<br>Weather App!</h3>
         </div>
         <div class="col bg-white h-100">
           <div class="row h-100"">
@@ -28,8 +28,8 @@
               </form>  
             </div>
             <div class="col-6 align-self-center cityData">
-              <img class="loadingGif" src="./img/loading.gif" alt="loading">
-              <div class="jumbotron jumbotron-fluid" style="min-width: 12rem">
+              <img class="loadingGif" src="./img/loading.gif" alt="loading" style="display: none">
+              <div class="jumbotron jumbotron-fluid" style="min-width: 12rem; display: none">
                 <div class="container">
                   <h3 class="cityName"></h3>
                   <img class="weatherIcon bg-primary rounded" src="" alt="weather icon">
